up date - video - increment level - decrement level

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,50 @@
 {
     "test": "TEST1234",
     "test2": "12 + 4 = {result}",
-    "hello": "Hello"
+    "hello": "Hello",
+    "Onboading_welcome": "Welcome to LookChin",
+    "Onboading_thailand": "thailand",
+    "Onboading_start": "Get started",
+    "Onboading_country": "Select current country",
+
+    "TermsAgree_Agreeall": "Agree All ",
+    "TermsAgree_TermsAgree": "Terms of Service Agreement",
+    "TermsAgree_Policy": "Personal Information Collection and Usage Agreement",
+    "TermsAgree_age": "I am over 18 years old.",
+    "TermsAgree_accept": "Agree to get started",
+
+    "login_signup_phoneno": "Let's verify your Phone number",
+    "login_signup_phoneno1": "Your number is not shown to others and is only used for verification",
+    "login_signup_phoneno2": "Enter phone number",
+    "login_signup_sendcode": "Send code",
+    "login_signup_changeno": "Changed phone number?  Find account by email.",
+    "login_signup_password": "Enter code",
+    "login_signup_password1": "Send code again",
+    "login_signup_otp": "Do not share this with anyone else.",
+    "login_signup_start": "Agree to get started",
+    "login_signup_tremsagree": "Terms of Use and Privacy Policy",
+    "login_signup_sendotp": "We've sent you a text with the code. (It could take up to 30 seconds.)",
+    "login_signup_wrongotp": "Enter the verification code again.",
+    "login_signup_expire": "Input time has expired. Try send code again.",
+    "login_signup_checkphonno": "Make sure your mobile number is entered correctly. Try again.",
+    "login_signup_wait10sec": "Unable to resend verification code within 10 seconds.",
+    "login_signup_remaining": "You have 3 remaining verification codes for today.",
+    "login_signup_trytmr": "You can receive the verification code up to 5 times per day. Try again tomorrow.",
+
+    "setting_setting": "Settings",
+    "setting_noti": "Alerts",
+    "setting_usersetting": "User settings",
+    "setting_country": "Change country",
+    "setting_language": "Language settings",
+    "setting_theme": "Theme",
+    "setting_infoandsupport": "More info and support",
+    "setting_new": "What's new?",
+    "setting_help": "Help",
+    "setting_terms": "Terms of Use",
+    "setting_policy": "Privacy Policy",
+    "setting_locationterms": "Location-Based Services Terms",
+    "setting_version": "version",
+    "setting_logout": "Log out",
+    "setting_deleteac": "deleteAccount"
+
 }
