--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -1,5 +1,50 @@
 {
     "test": "ทดสอบ1234",
     "test2":"12 + 4 = {result}",
-    "hello": "สวัสดี"
+    "hello": "สวัสดี",
+    "Onboading_welcome": "ยินดีต้องรับสู่  LookChin",
+    "Onboading_thailand": "ประเทศไทย",
+    "Onboading_start": "เริ่มต้นการใช้งาน ",
+    "Onboading_country": "เลือกที่อยู่ปัจจุบัน",
+
+    "TermsAgree_Agreeall": "เห็นด้วยทั้งหมด",
+    "TermsAgree_TermsAgree": "เงื่อนไขข้อตกลงการใช้บริการ",
+    "TermsAgree_Policy": "นโยบายคุ้มครองความเป็นส่วนตัว",
+    "TermsAgree_age": "อายุมากกว่า 18 ปี",
+    "TermsAgree_accept": "ยอมรับ",
+
+    "login_signup_phoneno": "ใส่หมายเลขโทรศัพท์ของคุณ",
+    "login_signup_phoneno1": "หมายเลขโทรศัพท์ของคุณจะไม่แสดงให้ผู้อื่นเห็น และใช้เพื่อการยืนยันเท่านั้น",
+    "login_signup_phoneno2": "หมายเลขโทรศัพท์",
+    "login_signup_sendcode": "ส่งรหัส",
+    "login_signup_changeno": "คุณเปลี่ยนหมายเลขโทรศัพท์ใช่หรือไม่  ใช้อีเมล",
+    "login_signup_password": "ใส่รหัส",
+    "login_signup_password1": "ส่งรหัสอีกครั้ง",
+    "login_signup_otp": "Do not share this with anyone else.",
+    "login_signup_start": "Agree to get started",
+    "login_signup_tremsagree": "เงื่อนไขข้อตกลงการใช้บริการและนโยบายคุ้มครองความเป็นส่วนตัว",
+    "login_signup_sendotp": "เราส่งรหัสไปที่หมายเลขโทรศัพท์ของคุณแล้ว (ใช้เวลา 30วินาที)",
+    "login_signup_wrongotp": "รหัสนี้ใช้ไม่ได้ ตรวจสอบแล้วลองอีกครั้ง",
+    "login_signup_expire": "รหัสหมดอายุ กดส่งรหัสยืนยันใหม่อีกครั้ง เพื่อรับรหัสใหม่",
+    "login_signup_checkphonno": "โปรดตรวจสอบหมายเลขโทรศัพท์ของคุณอีกครั้ง",
+    "login_signup_wait10sec": "ไม่สามารถส่งรหัสซ้ำภายใน 10 วินาทีได้",
+    "login_signup_remaining": "คุณเหลือรหัสยืนยัน 3 ครั้งสำหรับวันนี้",
+    "login_signup_trytmr": "คุณสามารถรับรหัสยืนยัน ได้ 5 ครั้งในหนึ่งวัน ลองอีกครั้งวันพรุ่งนี้",
+
+    "setting_setting": "การตั้งค่า",
+    "setting_noti": "แจ้งเตือน",
+    "setting_usersetting": "ตั้งค่าผู้ใช้",
+    "setting_country": "เปลี่ยนประเทศ",
+    "setting_language": "ตั้งค่าภาษา",
+    "setting_theme": "ธีม",
+    "setting_infoandsupport": "การสนับสนุนและเกี่ยวกับ",
+    "setting_new": "ประกาศใหม่",
+    "setting_help": "ช่วยเหลือ",
+    "setting_terms": "เงื่อนไขข้อตกลงการใช้บริการ",
+    "setting_policy": "นโยบายคุ้มครองความเป็นส่วนตัว",
+    "setting_locationterms": "ข้อกำหนดบริการตามพื้นที่",
+    "setting_version": "เวอร์ชัน",
+    "setting_logout": "ออกจากระบบ",
+    "setting_deleteac": "ลบบัญชีผู้ใช้"
+
 }
